# SFT

./: README.md  all_log.py  all_log.sh  runtransp.sh  transp.py
sft-iterative-map/: .gitignore  README.md  pyproject.toml
sft-iterative-map/scripts/: predict_cycle.py  run_calibration.py  run_go_rule.py  run_map_analysis.py
sft-iterative-map/sftmap/: __init__.py  ar_emergence.py  calibration.py  go_rule.py  iterative_map.py  sft.py  validation.py
sft-iterative-map/tests/: test_calibration.py  test_go_rule.py  test_iterative_map.py
